@@ -1,4 +1,4 @@
-Copyright (C)  2005, 2006, 2007, 2009, 2015, 2016, 2017, 2018, 2019, 2020
+Copyright (C)  2005, 2006, 2007, 2009, 2015, 2016, 2017, 2018, 2019, 2020, 2021
                Heiko Stamer <HeikoStamer@gmx.net>
   Permission is granted to copy, distribute and/or modify this document
   under the terms of the GNU Free Documentation License, Version 1.3
@@ -137,7 +137,7 @@ Requirements
 
   * GNU Multiple Precision Arithmetic Library (libgmp), version >= 6.1.2,
     https://gmplib.org/
-  * GNU Crypto Library (libgcrypt), version >= 1.8.0,
+  * GNU Crypto Library (libgcrypt), version >= 1.9.0,
     https://gnupg.org/download/index.html
   * GNU Privacy Guard Error Code Library (libgpg-error), version >= 1.27,
     https://gnupg.org/download/index.html
@@ -154,7 +154,7 @@ Requirements
   platforms with the given compilers, respectively:
 
   ++ GNU/Linux (Gentoo Linux)    x86_64    gcc 10.2.0 (details omitted)
-  ++ GNU/Linux (Gentoo Linux)    x86_64  clang 11.0.0 (details omitted)
+  ++ GNU/Linux (Gentoo Linux)    x86_64  clang 11.0.1 (details omitted)
   ++ GNU/Linux (Debian Linux)    x86_64    gcc  8.3.0 (details omitted)
   ++ GNU/Linux (Trisquel Linux)  x86_64    gcc  4.8.4 (details omitted)
   ++ OpenBSD 6.4                 amd64     gcc  4.2.1 (details omitted)
@@ -186,8 +186,8 @@ Bugs, Contribution, Source code
 
 Copyright and License of this software
 --------------------------------------
-  (C) 2005, 2006, 2007, 2009, 
-      2015, 2016, 2017, 2018, 2019, 2020  Heiko Stamer <HeikoStamer@gmx.net>
+  (C) 2005, 2006, 2007, 2009, 2015, 2016, 2017,
+      2018, 2019, 2020, 2021  Heiko Stamer <HeikoStamer@gmx.net>
         GNU General Public License version 2, or (at your option) any later
         version published by the Free Software Foundation.
 
