@@ -1,4 +1,4 @@
-# Copyright (C) 2005--2007, 2009, 2015--2019  Heiko Stamer <HeikoStamer@gmx.net>
+# Copyright (C) 2005--2007, 2009, 2015--2021  Heiko Stamer <HeikoStamer@gmx.net>
 #
 # This file is part of LibTMCG.
 #
@@ -18,7 +18,7 @@
 #
 # (Process this file with GNU autoconf to produce a configure script.)
 
-AC_REVISION([20190914])
+AC_REVISION([20210123])
 AC_PREREQ(2.61)
 
 AC_INIT([LibTMCG], [1.4.0], [HeikoStamer@gmx.net], [libTMCG],
@@ -59,7 +59,7 @@ LIBTMCG_CONFIG_CFLAGS=""
 
 # Define some security parameters and helping macros
 # (NOTE: Please update also libTMCG.hh, if changed!)
-AC_DEFINE(TMCG_LIBGCRYPT_VERSION, "1.8.0",
+AC_DEFINE(TMCG_LIBGCRYPT_VERSION, "1.9.0",
 	[Define the necessary version number of the GNU gcrypt library])
 AC_DEFINE(TMCG_LIBGMP_VERSION, "6.1.2",
 	[Define the necessary version number of the GNU gmp library])
@@ -207,9 +207,9 @@ AC_SUBST(LIBGMP_CFLAGS)
 LDFLAGS="$backup_LDFLAGS"
 CPPFLAGS="$backup_CPPFLAGS"
 
-AM_PATH_LIBGCRYPT("1.8.0")
+AM_PATH_LIBGCRYPT("1.9.0")
 if test "x$LIBGCRYPT_LIBS" = "x"; then
-	AC_MSG_ERROR([libgcrypt >= 1.8.0 is required])
+	AC_MSG_ERROR([libgcrypt >= 1.9.0 is required])
 fi
 backup_CPPFLAGS="$CPPFLAGS"
 CPPFLAGS="$LIBGCRYPT_CFLAGS $backup_CPPFLAGS"
