@@ -18,7 +18,8 @@
 
    This file is part of LibTMCG.
 
- Copyright (C) 2016, 2017, 2018, 2019, 2020  Heiko Stamer <HeikoStamer@gmx.net>
+ Copyright (C) 2016, 2017, 2018, 2019, 2020,
+               2021  Heiko Stamer <HeikoStamer@gmx.net>
 
    LibTMCG is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -8367,11 +8368,7 @@ void CallasDonnerhackeFinneyShawThayerRFC4880::PacketSigPrepareSelfSignature
 	if (rfc4880bis)
 	{
 		tmcg_openpgp_octets_t paa;
-#if GCRYPT_VERSION_NUMBER < 0x010900
-		// FIXME: remove, if libgcrypt >= 1.9.0 required by configure.ac
-#else
 		paa.push_back(TMCG_OPENPGP_AEADALGO_EAX);
-#endif
 		paa.push_back(TMCG_OPENPGP_AEADALGO_OCB);
 		SubpacketEncode(34, false, paa, subpackets);
 	}
@@ -8475,11 +8472,7 @@ void CallasDonnerhackeFinneyShawThayerRFC4880::PacketSigPrepareDesignatedRevoker
 	if (rfc4880bis)
 	{
 		tmcg_openpgp_octets_t paa;
-#if GCRYPT_VERSION_NUMBER < 0x010900
-		// FIXME: remove, if libgcrypt >= 1.9.0 required by configure.ac
-#else
 		paa.push_back(TMCG_OPENPGP_AEADALGO_EAX);
-#endif
 		paa.push_back(TMCG_OPENPGP_AEADALGO_OCB);
 		SubpacketEncode(34, false, paa, subpackets);
 	}
@@ -13871,12 +13864,7 @@ gcry_error_t CallasDonnerhackeFinneyShawThayerRFC4880::SymmetricEncryptAEAD
 	switch (aeadalgo)
 	{
 		case TMCG_OPENPGP_AEADALGO_EAX:
-#if GCRYPT_VERSION_NUMBER < 0x010900
-			// FIXME: remove, if libgcrypt >= 1.9.0 required by configure.ac
-			ciphermode = (enum gcry_cipher_modes)14;
-#else
 			ciphermode = GCRY_CIPHER_MODE_EAX;
-#endif
 			break;
 		case TMCG_OPENPGP_AEADALGO_OCB:
 			ciphermode = GCRY_CIPHER_MODE_OCB;
@@ -14682,12 +14670,7 @@ gcry_error_t CallasDonnerhackeFinneyShawThayerRFC4880::SymmetricDecryptAEAD
 	switch (aeadalgo)
 	{
 		case TMCG_OPENPGP_AEADALGO_EAX:
-#if GCRYPT_VERSION_NUMBER < 0x010900
-			// FIXME: remove, if libgcrypt >= 1.9.0 required by configure.ac
-			ciphermode = (enum gcry_cipher_modes)14;
-#else
 			ciphermode = GCRY_CIPHER_MODE_EAX;
-#endif
 			break;
 		case TMCG_OPENPGP_AEADALGO_OCB:
 			ciphermode = GCRY_CIPHER_MODE_OCB;
